--- a/frontend/src/styles/layout/_sidebar.scss
+++ b/frontend/src/styles/layout/_sidebar.scss
@@ -22,6 +22,18 @@
   margin-left: 0 !important;
 }
 
+.list-toolbar {
+  display: flex;
+  margin-left: 1px;
+  margin-top: 10px;
+  margin-bottom: 4px !important; /* 设置底部间距 */
+  width: 100%;
+
+  .el-button {
+    margin-left: 3px;
+  }
+}
+
 /* 修改折叠面板样式 */
 .file-panel :deep(.el-collapse) {
   border: none;
