--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -2,11 +2,11 @@
 $primary-color: #1976D2;
 $background-color: #f5f7fa;
 $text-color: #2c3e50;
-$border-color: #e0e0e00;
+$border-color: #e0e0e0;
 $cell-background: #ffffff;
 
 // 布局尺寸
-$navbar-height: 60px;
+$navbar-height: 47px;
 $sidebar-width: 320px;
 $resize-handle-width: 8px;
 
@@ -16,4 +16,4 @@ $breakpoint-lg: 1024px;
 
 // 过渡动画
 $transition-duration: 0.3s;
-$transition-easing: ease-in-out; 
+$transition-easing: ease-in-out;
