--- a/frontend/src/styles/layout/_sidebar.scss
+++ b/frontend/src/styles/layout/_sidebar.scss
@@ -1,15 +1,18 @@
+@import '../variables';
 
 .content-area {
   flex-grow: 1; /* 使内容区域占据剩余空间 */
   border: 1px solid #ccc;
-  height: calc(100vh - 47px); /* 减去navbar的高度 */
+  height: calc(100vh - #{$navbar-height});/* 减去navbar的高度 */
   width: 100%;
   overflow: hidden;
+  overflow-y: auto; /* 添加垂直滚动条 */
 }
 
 .file-panel {
   display: flex;
   align-items: flex-start;
+  height: calc(100vh - #{$navbar-height});
   transition: none;
 }
 
